--- a/index.html
+++ b/index.html
@@ -5,5 +5,26 @@
     <title></title>
 </head>
 <body>
+    <ul>
+        <li><a href="/adventure-novels.html">Adventure Novels</a></li>
+        <li><a href="/amazon-wishlist.html">Amazon Wishlist</a></li>
+        <li><a href="/book-signing.html">Book Signing</a></li>
+        <li><a href="/book-signing-round-trip.html">Book Signing Round Trip</a></li>
+        <li><a href="/custom-signed-copy.html">Custom Signed Copy</a></li>
+        <li><a href="/hemera-nyx.html">Hemera Nyx</a></li>
+        <li><a href="/hemera-nyx-book-1.html">The Adventures of Hemera Nyx: Book 1</a></li>
+        <li><a href="/hemera-nyx-book-2.html">The Adventures of Hemera Nyx: Book 2</a></li>
+        <li><a href="/hemera-nyx-book-3.html">The Adventures of Hemera Nyx: Book 3</a></li>
+        <li><a href="/hemera-nyx-book-4.html">The Adventures of Hemera Nyx: Book 4</a></li>
+        <li><a href="/hyper-nostalgia.html">Hyper Nostalgia</a></li>
+        <li><a href="/ko-fi.html">Support me on Ko-Fi</a></li>
+        <li><a href="/menu.html">Menu</a></li>
+        <li><a href="/patreon.html">Support me on Patreon</a></li>
+        <li><a href="/paypal.html">Support me on PayPal</a></li>
+        <li><a href="/search.html">Search</a></li>
+        <li><a href="/services.html">Services</a></li>
+        <li><a href="/tiktok.html">TikTok</a></li>
+        <li><a href="/wishlist.html">Wishlist</a></li>
+    </ul>
 </body>
 </html>
