--- a/ko-fi.html
+++ b/ko-fi.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Support me on Ko-Fi</title>
 </head>
 <body>
 </body>
