--- a/hemera-nyx-book-4.html
+++ b/hemera-nyx-book-4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>The Adventures of Hemera Nyx: Book 4</title>
 </head>
 <body>
 </body>
