--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <li><a href="/adventure-novels.html">Adventure Novels</a></li>
         <li><a href="/amazon-wishlist.html">Amazon Wishlist</a></li>
         <li><a href="/book-signing.html">Book Signing</a></li>
-        <li><a href="/book-signing-round-trip.html">Book Signing Round Trip</a></li>
+        <li><a href="/book-signing-round-trip.html">Book Signing: Option 1</a></li>
+        <li><a href="/book-signing-from-the-tap.html">Book Signing: Option 2</a></li>
         <li><a href="/custom-signed-copy.html">Custom Signed Copy</a></li>
         <li><a href="/hemera-nyx.html">Hemera Nyx</a></li>
         <li><a href="/hemera-nyx-book-1.html">The Adventures of Hemera Nyx: Book 1</a></li>
