--- a/book-signing-from-the-tap.html
+++ b/book-signing-from-the-tap.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Book Signing - From the Tap</title>
+    <title>Book Signing: Option 2</title>
 </head>
 <body>
 </body>
