--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <li><a href="/hemera-nyx-book-3.html">The Adventures of Hemera Nyx: Book 3</a></li>
         <li><a href="/hemera-nyx-book-4.html">The Adventures of Hemera Nyx: Book 4</a></li>
         <li><a href="/hyper-nostalgia.html">Hyper Nostalgia</a></li>
-        <li><a href="/ko-fi.html">Support me on Ko-Fi</a></li>
+        <li><a href="/ko-fi.html">Support RSK on Ko-Fi</a></li>
         <li><a href="/menu.html">Menu</a></li>
-        <li><a href="/patreon.html">Support me on Patreon</a></li>
-        <li><a href="/paypal.html">Support me on PayPal</a></li>
+        <li><a href="/patreon.html">Support RSK on Patreon</a></li>
+        <li><a href="/paypal.html">Support RSK on PayPal</a></li>
         <li><a href="/search.html">Search</a></li>
         <li><a href="/services.html">Services</a></li>
         <li><a href="/tiktok.html">TikTok</a></li>
