--- a/patreon.html
+++ b/patreon.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Support me on Patreon</title>
+    <title>Support RSK on Patreon</title>
 </head>
 <body>
 </body>
