--- a/paypal.html
+++ b/paypal.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Support me on PayPal</title>
+    <title>Support RSK on PayPal</title>
 </head>
 <body>
 </body>
