--- a/hemera-nyx-book-1.html
+++ b/hemera-nyx-book-1.html
@@ -5,5 +5,6 @@
     <title>The Adventures of Hemera Nyx: Book 1</title>
 </head>
 <body>
+    <img src="/_/images/02-hemera-nyx-01.webp" alt="The Adventures of Hemera Nyx in the Galaxy of the Future!">
 </body>
 </html>
