--- a/ko-fi.html
+++ b/ko-fi.html
@@ -5,5 +5,6 @@
     <title>Support RSK on Ko-Fi</title>
 </head>
 <body>
+    <img src="/_/images/10-kofi.webp" alt="Support  RSK on Ko-Fi">
 </body>
 </html>
