--- a/patreon.html
+++ b/patreon.html
@@ -5,5 +5,6 @@
     <title>Support RSK on Patreon</title>
 </head>
 <body>
+    <img src="/_/images/10-patreon.webp" alt="Support RSK on Patreon">
 </body>
 </html>
