--- a/tiktok.html
+++ b/tiktok.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TikTok</title>
+    <title>@RSKRules on TikTok</title>
 </head>
 <body>
+    <img src="/_/images/08-tiktok.webp" alt="Check out @rskrules on TikTok">
 </body>
 </html>
