--- a/hemera-nyx-book-3.html
+++ b/hemera-nyx-book-3.html
@@ -5,5 +5,6 @@
     <title>The Adventures of Hemera Nyx: Book 3</title>
 </head>
 <body>
+    <img src="/_/images/04-hemera-nyx-03.webp" alt="The Adventures of Hemera Nyx: Book 3">
 </body>
 </html>
