--- a/hemera-nyx-book-4.html
+++ b/hemera-nyx-book-4.html
@@ -5,5 +5,6 @@
     <title>The Adventures of Hemera Nyx: Book 4</title>
 </head>
 <body>
+    <img src="/_/images/05-hemera-nyx-04.webp" alt="The Adventures of Hemera Nyx: Book 4">
 </body>
 </html>
