--- a/hyper-nostalgia.html
+++ b/hyper-nostalgia.html
@@ -5,5 +5,6 @@
     <title>Hyper Nostalgia</title>
 </head>
 <body>
+    <img src="/_/images/06-hyper-nostalgia.webp" alt="Hyper Nostalgia">
 </body>
 </html>
