--- a/menu.html
+++ b/menu.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Menu
-    </title>
+    <title>Menu</title>
 </head>
 <body>
 </body>
