--- a/book-signing.html
+++ b/book-signing.html
@@ -5,6 +5,6 @@
     <title>Book Signing</title>
 </head>
 <body>
-    <img src="/book-signing.html" alt="Book Signing Options">
+    <img width="300" src="/book-signing.html" alt="Book Signing Options">
 </body>
 </html>
