--- a/hemera-nyx-book-2.html
+++ b/hemera-nyx-book-2.html
@@ -5,6 +5,6 @@
     <title>The Adventures of Hemera Nyx: Book 2</title>
 </head>
 <body>
-    <img src="/_/images/03-hemera-nyx-02.webp" alt="The Adventures of Hemera Nyx: Book 2">
+    <img width="300" src="/_/images/03-hemera-nyx-02.webp" alt="The Adventures of Hemera Nyx: Book 2">
 </body>
 </html>
