--- a/tiktok.html
+++ b/tiktok.html
@@ -5,6 +5,6 @@
     <title>@RSKRules on TikTok</title>
 </head>
 <body>
-    <img src="/_/images/08-tiktok.webp" alt="Check out @rskrules on TikTok">
+    <img width="300" src="/_/images/08-tiktok.webp" alt="Check out @rskrules on TikTok">
 </body>
 </html>
