--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-    <img src="/_/images/01-index.webp" alt="index">
+    <img width="300" src="/_/images/01-index.webp" alt="index">
     <ul>
         <li><a href="/adventure-novels.html">Adventure Novels</a></li>
         <li><a href="/amazon-wishlist.html">Amazon Wishlist</a></li>
