--- a/paypal.html
+++ b/paypal.html
@@ -5,6 +5,6 @@
     <title>Support RSK on PayPal</title>
 </head>
 <body>
-    <img src="/_/images/10-paypal.webp" alt="Support RSK on PayPal">
+    <img width="300" src="/_/images/10-paypal.webp" alt="Support RSK on PayPal">
 </body>
 </html>
