--- a/wishlist.html
+++ b/wishlist.html
@@ -5,5 +5,6 @@
     <title>Wishlist</title>
 </head>
 <body>
+    <img width="300" src="/_/images/09-wishlist.webp" alt="Wishlist">
 </body>
 </html>
