--- a/adventure-novels.html
+++ b/adventure-novels.html
@@ -5,5 +5,8 @@
     <title>Adventure Novels</title>
 </head>
 <body>
+    <ul>
+        <li><a href="/hemera-nyx-book-1.html">The Adventures of Hemera Nyx in the Galaxy of the Future!</a></li>
+    </ul>
 </body>
 </html>
