--- a/book-signing-from-the-tap.html
+++ b/book-signing-from-the-tap.html
@@ -5,5 +5,8 @@
     <title>Book Signing: Option 2</title>
 </head>
 <body>
+    <ul>
+        <li><a href="https://rskrules.com/services/book-signing/#option-2">From the Source</a></li>
+    </ul>
 </body>
 </html>
