--- a/book-signing-round-trip.html
+++ b/book-signing-round-trip.html
@@ -5,5 +5,8 @@
     <title>Book Signing: Option 1</title>
 </head>
 <body>
+    <ul>
+        <li><a href="https://rskrules.com/services/book-signing/#option-1">Round Trip</a></li>
+    </ul>
 </body>
 </html>
