--- a/book-signing.html
+++ b/book-signing.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <img width="300" src="/_/images/07-book-signing.webp" alt="Book Signing Options">
+    <ul>
+        <li><a href="https://rskrules.com/services/book-signing">Round Trip</a></li>
+    </ul>
 </body>
 </html>
