--- a/custom-signed-copy.html
+++ b/custom-signed-copy.html
@@ -5,5 +5,10 @@
     <title>Custom Signed Copy</title>
 </head>
 <body>
+    <ul>
+        <ul>
+            <li><a href="https://rskrules.com/services/book-signing">Get a custom signed copy of your favorite book</a></li>
+        </ul>
+    </ul>
 </body>
 </html>
