--- a/hemera-nyx-book-1.html
+++ b/hemera-nyx-book-1.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <img width="300" src="/_/images/02-hemera-nyx-01.webp" alt="The Adventures of Hemera Nyx in the Galaxy of the Future!">
+    <ul>
+        <li><a href="https://www.amazon.com/dp/B0BSDL6ZXB">The Adventures of Hemera Nyx in the Galaxy of the Future!</a></li>
+    </ul>
 </body>
 </html>
