--- a/hemera-nyx-book-4.html
+++ b/hemera-nyx-book-4.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <img width="300" src="/_/images/05-hemera-nyx-04.webp" alt="The Adventures of Hemera Nyx: Book 4">
+    <ul>
+        <li>coming soon.</li>
+    </ul>
 </body>
 </html>
