--- a/hyper-nostalgia.html
+++ b/hyper-nostalgia.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <img width="300" src="/_/images/06-hyper-nostalgia.webp" alt="Hyper Nostalgia">
+    <ul>
+        <li><a href="https://rskrules.com/https://rskrules.com/services/hyper-nostalgia/">Hyper Nostalgia</a></li>
+    </ul>
 </body>
 </html>
