--- a/ko-fi.html
+++ b/ko-fi.html
@@ -6,5 +6,9 @@
 </head>
 <body>
     <img width="300" src="/_/images/10-kofi.webp" alt="Support  RSK on Ko-Fi">
+    <ul>
+        <li><a href="https://ko-fi.com/rskrules">Help RSK buy some new ISBNs</a></li>
+        <li><a href="https://ko-fi.com/rskrules">Help RSK purchase Atticus</a></li>
+    </ul>
 </body>
 </html>
