--- a/menu.html
+++ b/menu.html
@@ -5,5 +5,19 @@
     <title>Menu</title>
 </head>
 <body>
+    <ul>
+        <li>
+            <p>Novels</p>
+            <ul>
+                <li><a href="https://rskrules.com/novels">Novels</a></li>
+            </ul>
+        </li>
+        <li>
+            <p>Services</p>
+            <ul>
+                <li><a href="https://rskrules.com/services">Services</a></li>
+            </ul>
+        </li>
+    </ul>
 </body>
 </html>
