--- a/patreon.html
+++ b/patreon.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <img width="300" src="/_/images/10-patreon.webp" alt="Support RSK on Patreon">
+    <ul>
+        <li><a href="https://www.patreon.com/rskrules/posts">Subscribe to RSK on Patreon</a></li>
+    </ul>
 </body>
 </html>
