--- a/paypal.html
+++ b/paypal.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <img width="300" src="/_/images/10-paypal.webp" alt="Support RSK on PayPal">
+    <ul>
+        <li><a href="https://www.paypal.com/paypalme/rskrules">Support RSK on PayPal</a></li>
+    </ul>
 </body>
 </html>
