--- a/search.html
+++ b/search.html
@@ -5,5 +5,8 @@
     <title>Search</title>
 </head>
 <body>
+    <ul>
+        <li><a href="https://www.google.com/search?q=site%3Arskrules.com">search rskrules.com</a></li>
+    </ul>
 </body>
 </html>
