--- a/services.html
+++ b/services.html
@@ -5,5 +5,9 @@
     <title>Services</title>
 </head>
 <body>
+    <ul>
+        <li><a href="/hyper-nostalgia.html">Developmental Editing</a></li>
+        <li><a href="/book-signing.html">Custom Book Signing</a></li>
+    </ul>
 </body>
 </html>
