--- a/tiktok.html
+++ b/tiktok.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <img width="300" src="/_/images/08-tiktok.webp" alt="Check out @rskrules on TikTok">
+    <ul>
+        <li><a href="https://www.tiktok.com/@rskrules">Watch RSK's videos on TikTok</a></li>
+    </ul>
 </body>
 </html>
