--- a/wishlist.html
+++ b/wishlist.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <img width="300" src="/_/images/09-wishlist.webp" alt="Wishlist">
+    <ul>
+        <li><a href="https://www.amazon.com/hz/wishlist/ls/1MEO0FU7A4PAY?ref_=wl_share">Amazon Wishlist</a></li>
+    </ul>
 </body>
 </html>
