--- a/amazon-wishlist.html
+++ b/amazon-wishlist.html
@@ -5,5 +5,8 @@
     <title>Amazon Wishlist</title>
 </head>
 <body>
+    <ul>
+        <li><a href="https://www.amazon.com/hz/wishlist/ls/1MEO0FU7A4PAY?ref_=wl_share">Amazon Wishlist</a></li>
+    </ul>
 </body>
 </html>
