--- a/hemera-nyx-book-2.html
+++ b/hemera-nyx-book-2.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <img width="300" src="/_/images/03-hemera-nyx-02.webp" alt="The Adventures of Hemera Nyx: Book 2">
+    <ul>
+        <li>coming soon.</li>
+    </ul>
 </body>
 </html>
