--- a/hemera-nyx-book-3.html
+++ b/hemera-nyx-book-3.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <img width="300" src="/_/images/04-hemera-nyx-03.webp" alt="The Adventures of Hemera Nyx: Book 3">
+    <ul>
+        <li>coming soon.</li>
+    </ul>
 </body>
 </html>
