--- a/hyper-nostalgia.html
+++ b/hyper-nostalgia.html
@@ -7,7 +7,7 @@
 <body>
     <img width="300" src="/_/images/06-hyper-nostalgia.webp" alt="Hyper Nostalgia">
     <ul>
-        <li><a href="https://rskrules.com/https://rskrules.com/services/hyper-nostalgia/">Hyper Nostalgia</a></li>
+        <li><a href="https://rskrules.com/services/hyper-nostalgia/">Hyper Nostalgia</a></li>
     </ul>
 </body>
 </html>
